Prevent bottom items from overlapping

--- a/public/style.css
+++ b/public/style.css
@@ -1382,6 +1382,9 @@ body.mobile #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) div#ch
 #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) #chabad_right_colum [class$=body] {
   font-size: inherit;
 }
+#chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) #chabad_right_colum {
+  grid-template-rows: auto;
+}
 
 body:has(#cco_body > #photos > .photo[data-img="0"]) #cco_body > #photos {
   min-height: 150px;
